--- a/src/style.css
+++ b/src/style.css
@@ -935,7 +935,7 @@
 
   /*For Hero Section Component */
   .hero {
-    width: 100vw;
+    width: 100%;
     position: relative;
     top: 100px;
     display: flex;
@@ -952,6 +952,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0;
   }
   .transition-div {
     opacity: 1;
@@ -967,7 +968,7 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    width: 60%;
+    width: 100%;
   }
   .left-hero p,
   .lefty-hero p {
@@ -977,7 +978,7 @@
   }
   .left-hero h1,
   .lefty-hero h1 {
-    font-size: 50px;
+    font-size: 40px;
     letter-spacing: 5px;
     margin: 0;
   }
@@ -1461,8 +1462,17 @@
     background-color: #f8f9fa; */
   }
   .contact-form button {
-    text-align: center;
     font-size: 12px;
+    width: 120px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    background-color: #ffbd39;
+    border-radius: 25px;
+    letter-spacing: 3px;
+    padding: 15px 25px;
+    /* margin: 20px 20px 20px 0; */
+    border: none;
   }
   /*For Footer Component */
   .footer {
