--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,7 @@ body {
   color: white;
   background-color: black;
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
+  padding: 0;
+  box-sizing: border-box;
   font-family: "PT Sans Narrow", sans-serif;
 }
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-} */
